# poker_ppo

./: .gitignore  CMakeLists.txt  README.md  human_actions.jsonl
.claude/: settings.local.json
Game/: ActionPolicy.hpp  BettingConfig.hpp  CMakeLists.txt  Game.hpp  GameBase.hpp  GameConfig.hpp  GameState.hpp  Transitioner.hpp
Game/Context/: CardData.hpp  GameContext.hpp  HashUtil.hpp  InfoSetData.hpp  PlayerData.hpp  RoundData.hpp
Game/Utility/: CMakeLists.txt  CardConversion.hpp  HandStrength.hpp  Utility.cpp  Utility.hpp
Game/Utility/HandAbstraction/: CMakeLists.txt  hand_index.c  hand_index.h
Game/Utility/TwoPlusTwoHandEvaluator/: CMakeLists.txt  generate_table.cpp  test.cpp
Game/tests/: CMakeLists.txt  attention_test.cpp  betting_config_test.cpp  hand_strength_test.cpp  mmd_test.cpp  poker_config_test.cpp  showdown_test.cpp
include/: base_configs.h  best_response.h  cfv_targets.h  checkpoint.h  commands.h  config.h  elo_league.h  environment.h  features.h  league.h  metrics_logger.h  network.h  observation_builder.h  observation_layout.h  opponent_manager.h  opponent_pool.h  poker_env.h  policy.h  ppo.h  qfr_env.h  rollout.h  rollout_buffer.h  rollout_collector.h  rollout_coro.h  rollout_pool.h  types.h
src/: best_response.cpp  cfv_targets.cpp  checkpoint.cpp  cmd_benchmark.cpp  cmd_play.cpp  cmd_train.cpp  commands.cpp  elo_league.cpp  league.cpp  main.cpp  metrics_logger.cpp  network.cpp  observation_builder.cpp  opponent_manager.cpp  opponent_pool.cpp  poker_env.cpp  ppo.cpp  qfr_env.cpp  rollout.cpp  rollout_buffer.cpp  rollout_collector.cpp
tools/: play.py  plot_live.py
